Fixed AddressBalance fields